// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments out if type might be "tray" 1`] = `
"import { DialogTrigger, ActionButton, Dialog, Heading, Divider, Content, Text } from "@react-spectrum/s2";

// TODO(S2-upgrade): type="tray" has not been implemented yet.
<DialogTrigger>
  <ActionButton>Disk Status</ActionButton>
  <Dialog>
    50% disk space remaining.
  </Dialog>
</DialogTrigger>"
`;

exports[`Comments out mobileType 1`] = `
"import { DialogTrigger, ActionButton, Dialog, Heading, Divider, Content, Text } from "@react-spectrum/s2";

<>
  // TODO(S2-upgrade): mobileType has not been implemented yet.
  <DialogTrigger>
    <ActionButton>Disk Status</ActionButton>
    <Dialog>
      50% disk space remaining.
    </Dialog>
  </DialogTrigger>
  // TODO(S2-upgrade): mobileType has not been implemented yet.
  <DialogTrigger>
    <ActionButton>Disk Status</ActionButton>
    <Dialog>
      50% disk space remaining.
    </Dialog>
  </DialogTrigger>
</>"
`;

exports[`Comments out type="tray" 1`] = `
"import { DialogTrigger, ActionButton, Dialog, Heading, Divider, Content, Text } from "@react-spectrum/s2";

// TODO(S2-upgrade): type="tray" has not been implemented yet.
<DialogTrigger>
  <ActionButton>Disk Status</ActionButton>
  <Dialog>
    50% disk space remaining.
  </Dialog>
</DialogTrigger>"
`;

exports[`Moves close function from DialogTrigger to Dialog 1`] = `
"import { DialogTrigger, Button, Dialog, Heading, Content, Divider } from "@react-spectrum/s2";

<DialogTrigger>
  <Button>Test</Button>
  <Dialog>{close => <>
      <Heading>Test</Heading>

      <Content>Content</Content>
    </>}</Dialog>
</DialogTrigger>"
`;

exports[`Removes divider 1`] = `
"import { Dialog, Heading, Content, Divider } from "@react-spectrum/s2";

<Dialog>
  <Heading>Test</Heading>

  <Content>Content</Content>
</Dialog>"
`;

exports[`Removes onDismiss and leaves a comment 1`] = `
"import { DialogTrigger, Button, Dialog, Heading, Content, Divider } from "@react-spectrum/s2";

<DialogTrigger>
  <Button>Test</Button>
  // onDismiss was removed from Dialog. Use onOpenChange on the DialogTrigger, or onDismiss on the DialogContainer instead
  <Dialog>{close => <>
      <Heading>Test</Heading>

      <Content>Content</Content>
    </>}</Dialog>
</DialogTrigger>"
`;

exports[`bails when it cannot move the close function 1`] = `
"import { DialogTrigger, Button, Dialog, Heading, Content, Divider } from "@react-spectrum/s2";

<DialogTrigger>
  <Button>Test</Button>
  // TODO(S2-upgrade): update this dialog to move the close function inside
  {(close) => 
    <ReusableDialog />}
</DialogTrigger>"
`;
